2015-06-23 Added changes to Clock module
2015-06-23 Fixed issue with erasing in IWB Toolbar module
2015-06-23 Fixed issue with displaying addon in player and preview in Page Score Counter module
2015-06-18 Fixed issue with displaying uppercase letters in crossword module
2015-06-17 Added new module Selectable Addons Binder
2015-06-17 Fixed issue with MathJax in Memo Game module
2015-06-17 Added changes in Fractions module
2015-06-16 Added changes in Figure Drawing module
2015-06-16 Fixed issue with dragging in SourceList and ImageSource modules
2015-06-15 Added compiled Commons library in version 2.0.0 to icplayer libs
2015-06-15 Added DraggableDroppableObject: New object which is draggable and droppable - in Commons (now in version 2.0.0)
2015-06-12 Added new module Lesson Reset
2015-06-12 Fixed issue with dragging empty gap in Text module
2015-06-11 Added fillArea and clearArea command to Coloring module
2015-06-10 Fixed issue with returning item to the source in copy mode
2015-06-09 Fixed issue with dragging in Show Answers mode in Multiple Gap module
2015-06-09 Added new properties 'Number of repetitions' and 'ID repeated element'
2015-06-08 Fixed issue with scoring in Line Number module
2015-06-08 Added new property Don't show ranges to Line Number module
2015-06-08 Fixed issue with parsing HTML tags in Text Selection module
2015-06-03 Fixed issue with displaying eKeyboard in disabled gaps in eKeyboard module
2015-06-03 Fixed issue with missing signs in Text Selection module
2015-06-03 Added assetsService and handling SVG files in Image module
2015-06-02 Fixed issue with duplicating gaps when elements from Multiple gap are dragged in Editor
2015-06-02 Added new command isOrderCorrect to Shape Tracing module
2015-06-01 Added enable, disable commands and isDisabled property in Image Gap and Image Source modules
2015-06-01 Fixed issue with check and reset in Basic Math Gaps module